[package]
name = "sfn-tpn"
description = "saffron's two-player networking code for turn-based games."
keywords = ["gamedev", "p2p", "multiplayer", "turn-based"]
categories = ["game-development", "asynchronous"]
version = "1.0.3"
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/sfn_tpn"
repository = "https://github.com/wade-cheng/sfn-tpn"
readme = "README.md"

[dependencies]
iroh = "0.90.0"
iroh-base = "0.90.0"
tokio = "1.46.1"

[dev-dependencies]
ggez = { git = "https://github.com/ggez/ggez", rev = "9a4d240"}

[package.metadata.release]
allow-branch = ["main"]
verify = false
